[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unemployment-insight-hub"
version = "1.0.0"
description = "A Dash web application for visualizing unemployment trends"
requires-python = ">=3.8"
dependencies = [
    "dash>=2.14.2",
    "pandas>=2.1.4",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]
